--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   
   <style>
     body {
-      background-image: url('GradientBG.png');
+      background-image: url('images/GradientBG.png');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
