--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -416,7 +416,7 @@
           
           if (myResult === 1) {
             // Vittoria
-            badgeClass = "status-badge-base status-badge-live"; // Sfondo verde
+            badgeClass = "status-badge-base status-badge-win"; // Sfondo verde
             badgeText = `+${myTeexWon.toFixed(1)}`;
           } else if (myResult === -1) {
             // Sconfitta
