--- a/public/login.html
+++ b/public/login.html
@@ -111,7 +111,8 @@
       });
     });
     
-    document.getElementById('loginForm').addEventListener('submit', async function(e) {
+    // Rimuoviamo questo event listener che sta sovrascrivendo quello in auth.js
+    /* document.getElementById('loginForm').addEventListener('submit', async function(e) {
       e.preventDefault();
       
       const email = document.getElementById('loginEmail').value;
@@ -141,7 +142,7 @@
         console.error('Errore:', error);
         alert(error.message);
       }
-    });
+    }); */
   </script>
 </body>
 </html>
