--- a/public/riassunto.html
+++ b/public/riassunto.html
@@ -65,7 +65,8 @@
           if (dataAge > maxAge) {
             console.error("I dati del contest sono scaduti");
             localStorage.removeItem('contestData'); // Pulisci i dati scaduti
-            alert("Errore: i dati del contest sono scaduti");
+            // Rimuovi l'alert che mostra il messaggio di errore
+            // alert("Errore: i dati del contest sono scaduti");
             window.location.href = '/user-landing.html';
             return;
           } else {
@@ -86,14 +87,15 @@
             return; // Esci dalla funzione se abbiamo recuperato i dati dal localStorage
           }
         } else {
-          // Se non abbiamo dati né nell'URL né nel localStorage, mostra un errore
-          console.error("Nessun dato contest trovato");
-          alert("Errore: dati del contest non trovati");
+          // Se non abbiamo dati né nell'URL né nel localStorage, non mostrare errori
+          // ma reindirizza silenziosamente alla pagina user-landing
+          console.log("Nessun dato contest trovato, reindirizzamento alla pagina principale");
           window.location.href = '/user-landing.html';
         }
       } catch (e) {
         console.error("Errore nel recupero dei dati contest:", e);
-        alert("Errore nel recupero dei dati del contest");
+        // Rimuovi l'alert che mostra il messaggio di errore
+        // alert("Errore nel recupero dei dati del contest");
         window.location.href = '/user-landing.html';
       }
     });
