--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -579,6 +579,10 @@
     });
   </script>
   <!-- Includi il file auth.js per accedere alla funzione logout() -->
+  <!-- Add these before loading auth.js -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   <script src="auth.js"></script>
   
   <script>
