--- a/public/riassunto.html
+++ b/public/riassunto.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/mobile2.css">
   
   <!-- Rimuovi il riferimento a auth.js qui -->
-
+  <script src="/js/avatar-functions.js"></script>
 <script>
     // Script per recuperare i dati dal localStorage o dall'URL
     document.addEventListener("DOMContentLoaded", () => {
