--- a/public/riassunto.html
+++ b/public/riassunto.html
@@ -186,7 +186,7 @@
   <div class="fab-background"></div>
   <div id="addPlayerBtn" class="fab_button" style="position: fixed; bottom: 96px; left: 50%; transform: translateX(-50%); display: flex; align-items: center; justify-content: center; z-index: 101; box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
     <img src="icons/add.png" alt="Add Player" style="width: 24px; height: 24px; margin-right: 8px;">
-    <span style="color: #ffffff;">ADD PLAYER</span>
+    <span style="color: #ffffff;">ADD PAPABILI</span>
   </div>
   <footer class="footer-nav" style="justify-content: flex-end;">
     <button id="resetTeamBtn" class="footer_button footer_button_light" disabled>RESET TEAM</button>
