--- a/public/FanteexBackend.html
+++ b/public/FanteexBackend.html
@@ -161,9 +161,9 @@
     
     <div class="admin-links">
       <div class="admin-card">
-        <h3>Upload Match Data</h3>
-        <p>Carica i dati delle partite dal file Excel. Aggiorna le informazioni sulle partite e i relativi eventi.</p>
-        <a href="uploadmatch.html" class="btn btn-primary">Accedi</a>
+        <h3>Chiudi sfide scadute</h3>
+        <p>Gestisci e chiudi automaticamente le sfide che hanno raggiunto la data di scadenza.</p>
+        <a href="sfidescadute.html" class="btn btn-primary">Accedi</a>
       </div>
       
       <div class="admin-card">
