--- a/public/rules.html
+++ b/public/rules.html
@@ -120,7 +120,7 @@
           <li><strong>3. Chi aveva scelto "Fumata Nera" al Conclave 1:</strong> ottiene <strong>2,5 punti</strong></li>
         </ul>
       
-        <p><em>N.B.: I punti si assegnano solo se l'evento accade nel conclave per cui hai fatto la previsione, con eccezioni per papa singolo e regionale che premiano anche scarti ridotti.</em></p>
+        <p><em>N.B.: I punti si assegnano solo se l'evento accade nel conclave per cui hai fatto la previsione, con eccezioni per Papa singolo e regionale che premiano anche scarti ridotti.</em></p>
       </div>
 
 
