--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -148,7 +148,7 @@
     async function loadUserLanding() {
       // Verifica che l'ID utente sia presente nel localStorage
       if (!userId || !authToken) {
-        window.location.href = 'index.html';
+        window.location.href = 'signin.html';
         return;
       }
       // Effettua la richiesta al server con il token di autenticazione
@@ -690,7 +690,7 @@
         localStorage.removeItem('userId');
         localStorage.removeItem('authToken');
         // Reindirizza alla pagina di login
-        window.location.href = "/index.html";
+        window.location.href = "/signin.html";
       });
     });
   </script>
