--- a/public/gestione-sfide2.html
+++ b/public/gestione-sfide2.html
@@ -493,7 +493,7 @@
       };
     });
   </script>
-
+  <script src="js/admin-protection.js"></script>
   <script src="js/gestione-sfide.js"></script>
   
   <!-- Script per gestire i pulsanti di dettaglio -->
