--- a/public/_old/25contest-details.html
+++ b/public/_old/25contest-details.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="teex-balance">
-       <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+       <img src="icons/sh.png" alt="Teex" class="teex-icon">
       <span id="teexContainer" class="teex_balance">0.0</span>
     </div>
 
