--- a/public/_old/25riassunto.html
+++ b/public/_old/25riassunto.html
@@ -135,14 +135,14 @@
       </div>
     </div>
     <div class="teex-balance">
-         <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+         <img src="icons/sh.png" alt="Teex" class="teex-icon">
       <span id="teexBalance" class="teex_balance">0.0</span>
     </div>
   </header>
   <div class="contest-container cc-header" id="contestHeaderContainer"></div>
   </div>
   <div class="budget-bar">
-    <img src="icons/ppc.png" alt="Teex" class="teex-left-icon">
+    <img src="icons/sh.png" alt="Teex" class="teex-left-icon">
     <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">Papa Coins left</span></span>
   </div>
   <div id="messaggio" style="display: none;"></div>
