--- a/public/contest-details.html
+++ b/public/contest-details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Contest Details - Fantaconclave</title>
+  <title>Contest Details - FANTAEUROVISION25</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,800;1,800&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/mobile.css">
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="teex-balance">
-       <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+       <img src="icons/sh.png" alt="Teex" class="teex-icon">
       <span id="teexContainer" class="teex_balance">0.0</span>
     </div>
 
