--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
  <!-- SEO Base -->
-<meta name="description" content="Fantaconclave è il fantasy game più celestiale del web. Sfida altri fedeli, crea la tua squadra di papabili e conquista il trono del conclave!">
-<meta name="keywords" content="fantacalcio, fantasy game, conclave, papabili, papacoins, sfide, fantaconclave">
-<meta name="author" content="Fantaconclave.it">
+<meta name="description" content="FANTAEUROVISION25 è il fantasy game più celestiale del web. Sfida altri fedeli, crea la tua squadra di papabili e conquista il trono del conclave!">
+<meta name="keywords" content="fantacalcio, fantasy game, conclave, papabili, SWISSHEARTS, sfide, FANTAEUROVISION25">
+<meta name="author" content="fantaconclave.it">
 
 <!-- Open Graph per condivisione social -->
-<meta property="og:title" content="Fantaconclave - Il fantasy game del conclave">
-<meta property="og:description" content="Sfida altri fedeli, guadagna Papacoins e conquista il trono. Habemus Magnum Victorem!">
-<meta property="og:image" content="https://fantaconclave.it/icons/ppc.png"> 
+<meta property="og:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
+<meta property="og:description" content="Sfida altri fedeli, guadagna SWISSHEARTS e conquista il trono. Habemus Magnum Victorem!">
+<meta property="og:image" content="https://fantaconclave.it/icons/sh.png"> 
 <meta property="og:url" content="https://fantaconclave.it/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Fantaconclave - Il fantasy game del conclave">
+<meta name="twitter:title" content="FANTAEUROVISION25 - Il fantasy game del conclave">
 <meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di papabili e vinci!">
-<meta name="twitter:image" content="https://fantaconclave.it/icons/ppc.png">
+<meta name="twitter:image" content="https://fantaconclave.it/icons/sh.png">
 
  
-  <title>Fantaconclave - Home</title>
+  <title>FANTAEUROVISION25 - Home</title>
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/mobile2.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat&display=swap" rel="stylesheet">
@@ -123,21 +123,21 @@
   </style>
 </head>
 <body>
-  <div class="logo-text">FANTACONCLAVE</div>
+  <div class="logo-text">FANTAEUROVISION25</div>
 
   <div class="intro">
-    <p><strong>Il fantasy game più celestiale del web.</strong> Sfida altri fedeli nel gioco dove i papabili diventano protagonisti. Divertiti, guadagna Papacoins e conquista il trono del conclave!</p>
+    <p><strong>Il fantasy game più celestiale del web.</strong> Sfida altri fedeli nel gioco dove i papabili diventano protagonisti. Divertiti, guadagna SWISSHEARTS e conquista il trono del conclave!</p>
   </div>
 
   <div class="how-to-play">
     <h2>Come si gioca</h2>
     <p>
       <strong>Sic et simpliciter:</strong><br>
-      Registrazione: Parti con 500 Papacoins.<br>
-      Sfide: Fino a 10 Papacoins per creare la tua squadra.<br>
+      Registrazione: Parti con 500 SWISSHEARTS.<br>
+      Sfide: Fino a 10 SWISSHEARTS per creare la tua squadra.<br>
       Montepremi: Il vincitore prende tutto. Pareggio? Dividetevi la gloria.<br>
       Punteggi: Papa esatto? 10 punti. Regionale? Fino a 5 punti. Fumate? 2,5 punti.<br>
-      Ascesa: Più Papacoins, più prestigio. Habemus Magnum Victorem!<br><br>
+      Ascesa: Più SWISSHEARTS, più prestigio. Habemus Magnum Victorem!<br><br>
       Vuoi leggere il regolamento completo? <a href="rules.html">Vai al regolamento</a>.
     </p>
   </div>
@@ -155,7 +155,7 @@
   </div>
 
   <div class="footer">
-    <p>© 2025 Fantaconclave.it - Per info: <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
+    <p>© 2025 fantaconclave.it - Per info: <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
   </div>
 </body>
 </html>
