--- a/public/riassunto.html
+++ b/public/riassunto.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Crea Squadra - Fantaconclave</title>
+  <title>Crea Squadra - FANTAEUROVISION25</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,800;1,800&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/mobile.css">
@@ -165,14 +165,14 @@
       </div>
     </div>
     <div class="teex-balance">
-         <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+         <img src="icons/sh.png" alt="Teex" class="teex-icon">
       <span id="teexBalance" class="teex_balance">0.0</span>
     </div>
   </header>
   <div class="contest-container cc-header" id="contestHeaderContainer"></div>
   </div>
   <div class="budget-bar">
-    <img src="icons/ppc.png" alt="Teex" class="teex-left-icon">
+    <img src="icons/sh.png" alt="Teex" class="teex-left-icon">
     <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">Papa Coins left</span></span>
   </div>
   <div id="messaggio" style="display: none;"></div>
