--- a/public/rules.html
+++ b/public/rules.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Regole - Fantaconclave</title>
+  <title>Regole - FANTAEUROVISION25</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -13,7 +13,7 @@
       background-color: #f5f5f5;
     }
     h1 {
-      color: #595a4a;
+      color: #131313;
       border-bottom: 2px solid #ff5500;
       padding-bottom: 10px;
     }
@@ -30,27 +30,27 @@
   </style>
 </head>
 <body>
-    <h1>Regole di Fantaconclave</h1>
+    <h1>Regole di FANTAEUROVISION25</h1>
   
     <div class="section">
       <h2>Sic et simpliciter</h2>
       <ul>
-        <li><strong>Registrazione:</strong> Parti con <strong>500 Papacoins</strong>.</li>
-        <li><strong>Sfide:</strong> Sfida altri fedeli, hai fino a <strong>10 Papacoins</strong> per creare la tua squadra.</li>
+        <li><strong>Registrazione:</strong> Parti con <strong>500 SWISSHEARTS</strong>.</li>
+        <li><strong>Sfide:</strong> Sfida altri fedeli, hai fino a <strong>10 SWISSHEARTS</strong> per creare la tua squadra.</li>
         <li><strong>Montepremi:</strong> Il vincitore prende tutto. Pareggio? Dividetevi la gloria.</li>
         <li><strong>Punteggi:</strong> Papa esatto? <strong>10 punti</strong>. Regionale? Fino a <strong>5 punti</strong>. Fumate? <strong>2,5 punti</strong>.</li>
-        <li><strong>Ascesa:</strong> Più Papacoins, più prestigio. Habemus Magnum Victorem!</li>
+        <li><strong>Ascesa:</strong> Più SWISSHEARTS, più prestigio. Habemus Magnum Victorem!</li>
       </ul>
     </div>
   
     <div class="section">
       <h2>1. Introduzione</h2>
-      <p>Benvenuto a Fantaconclave! Questo documento contiene le regole ufficiali del gioco. Leggile attentamente per comprendere come funziona il gioco e quali sono le tue responsabilità come giocatore.</p>
+      <p>Benvenuto a FANTAEUROVISION25! Questo documento contiene le regole ufficiali del gioco. Leggile attentamente per comprendere come funziona il gioco e quali sono le tue responsabilità come giocatore.</p>
     </div>
   
     <div class="section">
       <h2>2. Registrazione e Valuta</h2>
-      <p>Ogni utente inizia con 500 Papacoins. Per ogni sfida puoi spendere fino a 10 Papacoins per creare il tuo Sacrum Team.</p>
+      <p>Ogni utente inizia con 500 SWISSHEARTS. Per ogni sfida puoi spendere fino a 10 SWISSHEARTS per creare il tuo Sacrum Team.</p>
     </div>
   
     <div class="section">
@@ -59,7 +59,7 @@
       <ul>
         <li>1. Componi la squadra con i Papabili disponibili.</li>
         <li>2. Scegli se moltiplicare la posta (x5 o x10).</li>
-        <li>3. Conferma: se hai abbastanza Papacoins, la sfida viene inviata.</li>
+        <li>3. Conferma: se hai abbastanza SWISSHEARTS, la sfida viene inviata.</li>
       </ul>
       <p>La sfida sarà "Pending" per te, e "Invited" per il tuo avversario.</p>
     </div>
@@ -80,7 +80,7 @@
       <ul>
         <li><strong>Ready:</strong> Entrambi i giocatori hanno completato la squadra. In attesa del Conclave.</li>
         <li><strong>Live:</strong> La sfida è attiva e i punti vengono assegnati dopo i Conclavi.</li>
-        <li><strong>Completed:</strong> La sfida è finita. Il saldo Papacoins viene aggiornato.</li>
+        <li><strong>Completed:</strong> La sfida è finita. Il saldo SWISSHEARTS viene aggiornato.</li>
       </ul>
     </div>
   
@@ -105,7 +105,7 @@
   
     <div class="section">
       <h2>9. Ascesa nella Scala Celeste</h2>
-      <p>Accumula Papacoins, Condividi le tue vittorie sui social e dimostra di avere la stoffa per essere acclamato in Piazza San Pietro.</p>
+      <p>Accumula SWISSHEARTS, Condividi le tue vittorie sui social e dimostra di avere la stoffa per essere acclamato in Piazza San Pietro.</p>
     </div>
 
 
@@ -126,7 +126,7 @@
 
       <div class="section">
         <p><strong>Diritti riservati a fantaconclave.it</strong></p>
-        <p>Per ogni informazione su Fantaconclave, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
+        <p>Per ogni informazione su FANTAEUROVISION25, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
         <p><em>In fide et ludo, semper ad astra!</em></p>
       </div>
   </body>
