--- a/public/scegli-opponent.html
+++ b/public/scegli-opponent.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sfida Amico - Fantaconclave</title>
+  <title>Sfida Amico - FANTAEUROVISION25</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,800;1,800&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/mobile.css">
@@ -16,7 +16,7 @@
     .ppc-value {
       font-family: 'Montserrat', sans-serif;
       font-weight: 800;
-      color: #FFD700;
+      color: #0bdad7;
       font-size: 14px;
       display: flex;
       align-items: center;
@@ -35,7 +35,7 @@
       width: 80%;
       margin: 20px auto;
       padding: 12px;
-      background-color: #595a4a;
+      background-color: #131313;
       color: white;
       border: none;
       border-radius: 24px;
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="teex-balance">
-         <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+         <img src="icons/sh.png" alt="Teex" class="teex-icon">
       <span id="teexBalance" class="teex_balance">0.0</span>
     </div>
   </header>
@@ -80,8 +80,8 @@
       USERNAME
     </div>
     <div class="sort-item active" data-sort="teex">
-      <img src="icons/ppc.png" alt="PPC" style="width: 16px; height: 16px; margin-right: 4px; vertical-align: middle;">
-      PAPACOINS
+      <img src="icons/sh.png" alt="PPC" style="width: 16px; height: 16px; margin-right: 4px; vertical-align: middle;">
+      SWISSHEARTS
       <div class="sort-triangle desc"></div>
     </div>
   </div>
@@ -260,7 +260,7 @@
             <div>
               <h3 class="opponent-name">${user.username}</h3>
               <div class="ppc-value">
-                <img src="icons/ppc.png" alt="PPC" class="ppc-icon">
+                <img src="icons/sh.png" alt="PPC" class="ppc-icon">
                 ${teexBalance}
               </div>
             </div>
