--- a/public/terms.html
+++ b/public/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Termini e Condizioni - Fantaconclave</title>
+  <title>Termini e Condizioni - FANTAEUROVISION25</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -13,7 +13,7 @@
       background-color: #f5f5f5;
     }
     h1 {
-      color: #595a4a;
+      color: #131313;
       border-bottom: 2px solid #ff5500;
       padding-bottom: 10px;
     }
@@ -38,22 +38,22 @@
   
   <div class="section">
     <h2>1. Accettazione dei Termini</h2>
-    <p>Utilizzando Fantaconclave, accetti i presenti Termini e Condizioni. Se non accetti questi termini, non utilizzare la nostra piattaforma.</p>
+    <p>Utilizzando FANTAEUROVISION25, accetti i presenti Termini e Condizioni. Se non accetti questi termini, non utilizzare la nostra piattaforma.</p>
   </div>
   
   <div class="section">
     <h2>2. Descrizione del Servizio</h2>
-    <p>Fantaconclave è una piattaforma di gioco fantasy a tema conclave papale, che consente agli utenti di creare contest, selezionare papabili e competere con altri utenti in base all'esito dei conclavi. Il gioco è esclusivamente ai fini di intrattenimento e senza alcuno scopo di lucro.</p>
+    <p>FANTAEUROVISION25 è una piattaforma di gioco fantasy a tema conclave papale, che consente agli utenti di creare contest, selezionare papabili e competere con altri utenti in base all'esito dei conclavi. Il gioco è esclusivamente ai fini di intrattenimento e senza alcuno scopo di lucro.</p>
   </div>
   
   <div class="section">
     <h2>3. Registrazione e Account</h2>
-    <p>Per utilizzare Fantaconclave, devi registrarti e creare un account. Sei responsabile di mantenere la riservatezza delle tue credenziali e di tutte le attività che si verificano sotto il tuo account.</p>
+    <p>Per utilizzare FANTAEUROVISION25, devi registrarti e creare un account. Sei responsabile di mantenere la riservatezza delle tue credenziali e di tutte le attività che si verificano sotto il tuo account.</p>
   </div>
   
   <div class="section">
     <h2>4. Condotta dell'Utente</h2>
-    <p>Utilizzando Fantaconclave, accetti di:</p>
+    <p>Utilizzando FANTAEUROVISION25, accetti di:</p>
     <ul>
       <li>Non violare alcuna legge o regolamento</li>
       <li>Non interferire con il funzionamento della piattaforma</li>
@@ -64,17 +64,17 @@
   
   <div class="section">
     <h2>5. Proprietà Intellettuale</h2>
-    <p>Tutti i contenuti presenti su Fantaconclave, inclusi loghi, testi, grafica e software, sono di proprietà di Fantaconclave o dei suoi licenziatari e sono protetti dalle leggi sulla proprietà intellettuale.</p>
+    <p>Tutti i contenuti presenti su FANTAEUROVISION25, inclusi loghi, testi, grafica e software, sono di proprietà di FANTAEUROVISION25 o dei suoi licenziatari e sono protetti dalle leggi sulla proprietà intellettuale.</p>
   </div>
   
   <div class="section">
     <h2>6. Scopo Ludico e Gratuità</h2>
-    <p>Fantaconclave è un gioco gratuito, creato al solo fine di divertire gli utenti. Non sono previsti pagamenti, scommesse, né premi in denaro o beni materiali. Qualsiasi attività svolta sulla piattaforma ha natura esclusivamente ricreativa.</p>
+    <p>FANTAEUROVISION25 è un gioco gratuito, creato al solo fine di divertire gli utenti. Non sono previsti pagamenti, scommesse, né premi in denaro o beni materiali. Qualsiasi attività svolta sulla piattaforma ha natura esclusivamente ricreativa.</p>
   </div>
   
   <div class="section">
     <h2>7. Limitazione di Responsabilità</h2>
-    <p>Fantaconclave non è responsabile per eventuali danni diretti, indiretti, incidentali o consequenziali derivanti dall'utilizzo o dall'impossibilità di utilizzare la piattaforma.</p>
+    <p>FANTAEUROVISION25 non è responsabile per eventuali danni diretti, indiretti, incidentali o consequenziali derivanti dall'utilizzo o dall'impossibilità di utilizzare la piattaforma.</p>
   </div>
   
   <div class="section">
@@ -94,13 +94,13 @@
 
   <div class="section">
     <h2>11. Messaggio di Pace</h2>
-    <p>Fantaconclave augura al nuovo Papa un lungo pontificato di pace, serenità e rispetto tra tutte le religioni. Che il suo cammino sia illuminato dalla saggezza e dalla compassione verso ogni essere umano.</p>
+    <p>FANTAEUROVISION25 augura al nuovo Papa un lungo pontificato di pace, serenità e rispetto tra tutte le religioni. Che il suo cammino sia illuminato dalla saggezza e dalla compassione verso ogni essere umano.</p>
   </div>
 
   
   <div class="section">
     <p><strong>Diritti riservati a fantaconclave.it</strong></p>
-    <p>Per ogni informazione su Fantaconclave, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
+    <p>Per ogni informazione su FANTAEUROVISION25, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
     <p><em>In fide et ludo, semper ad astra!</em></p>
   </div>
   
