--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="teex-balance">
-         <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+         <img src="icons/sh.png" alt="Teex" class="teex-icon">
         <span id="teexBalance" class="teex_balance">415.0</span>
       </div>
     </header>
@@ -225,7 +225,7 @@
           <div class="welcome-container">
             <div class="welcome-text">
               <div class="welcome-to">WELCOME TO</div>
-              <div class="fanteex-title">FANTACONCLAVE</div>
+              <div class="fanteex-title">FANTAEUROVISION25</div>
               <div class="start-game">START YOUR FIRST GAME</div>
             </div>
             <div class="animated-arrows">
