--- a/public/_old/riassunto - Copy.html
+++ b/public/_old/riassunto - Copy.html
@@ -18,14 +18,14 @@
       </div>
     </div>
     <div class="teex-balance">
-         <img src="icons/ppc.png" alt="Teex" class="teex-icon">
+         <img src="icons/sh.png" alt="Teex" class="teex-icon">
       <span id="teexBalance" class="teex_balance">0.0</span>
     </div>
   </header>
   <div class="contest-container cc-header" id="contestHeaderContainer"></div>
   </div>
   <div class="budget-bar">
-    <img src="icons/ppc.png" alt="Teex" class="teex-left-icon">
+    <img src="icons/sh.png" alt="Teex" class="teex-left-icon">
     <span id="teexLeft"><span class="teex-left-text-cyan">10.0</span> <span class="teex-left-text-white">Papa Coins left</span></span>
   </div>
   <div id="messaggio" style="display: none;"></div>
@@ -450,11 +450,11 @@
               <img src="${getAvatarSrc(myAvatar)}" alt="${myName}" class="player-avatar-contest left-avatar ${leftWon ? 'winner-avatar' : ''}">
               <div class="triletter_contest left-name ${leftWon ? 'winner-name' : ''}">${myName.substring(0, 3)}</div>
               <div style="position: absolute; top: calc(50% - 14px); left: 50%; transform: translate(-50%, -50%); display: flex; align-items: baseline;">
-                <span class="result_bold" style="position: static; transform: none; color: ${leftWon ? '#FFD700' : '#fff'}">${leftScoreInt}</span>
-                <span class="win_index_perc" style="color: ${leftWon ? '#FFD700' : '#fff'}">.${leftScoreDec}</span>
+                <span class="result_bold" style="position: static; transform: none; color: ${leftWon ? '#0bdad7' : '#fff'}">${leftScoreInt}</span>
+                <span class="win_index_perc" style="color: ${leftWon ? '#0bdad7' : '#fff'}">.${leftScoreDec}</span>
                 <span style="margin: 0 5px; color: white; font-size: 20px;"> </span>
-                <span class="result_bold" style="position: static; transform: none; color: ${rightWon ? '#FFD700' : '#fff'}">${rightScoreInt}</span>
-                <span class="win_index_perc" style="color: ${rightWon ? '#FFD700' : '#fff'}">.${rightScoreDec}</span>
+                <span class="result_bold" style="position: static; transform: none; color: ${rightWon ? '#0bdad7' : '#fff'}">${rightScoreInt}</span>
+                <span class="win_index_perc" style="color: ${rightWon ? '#0bdad7' : '#fff'}">.${rightScoreDec}</span>
               </div>
               <div class="triletter_contest right-name ${rightWon ? 'winner-name' : ''}">${oppName.substring(0, 3)}</div>
               <img src="${getAvatarSrc(oppAvatar)}" alt="${oppName}" class="player-avatar-contest right-avatar ${rightWon ? 'winner-avatar' : ''}">
