--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy - Fantaconclave</title>
+  <title>Privacy - FANTAEUROVISION25</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -13,7 +13,7 @@
       background-color: #f5f5f5;
     }
     h1 {
-      color: #595a4a;
+      color: #131313;
       border-bottom: 2px solid #ff5500;
       padding-bottom: 10px;
     }
@@ -38,7 +38,7 @@
   
   <div class="section">
     <h2>1. Introduzione</h2>
-    <p>La presente Informativa sulla Privacy descrive come Fantaconclave raccoglie, utilizza e condivide i tuoi dati personali quando utilizzi la nostra applicazione e il nostro sito web.</p>
+    <p>La presente Informativa sulla Privacy descrive come FANTAEUROVISION25 raccoglie, utilizza e condivide i tuoi dati personali quando utilizzi la nostra applicazione e il nostro sito web.</p>
   </div>
   
   <div class="section">
@@ -112,7 +112,7 @@
 
   <div class="section">
     <h2>11. Durata del Trattamento e Chiusura del Servizio</h2>
-    <p>Fantaconclave è un'applicazione legata all'evento dell'elezione papale e verrà chiusa entro pochi giorni dalla proclamazione del nuovo Papa. Dopo la chiusura, i dati personali saranno cancellati entro 30 giorni, salvo obblighi di legge differenti.</p>
+    <p>FANTAEUROVISION25 è un'applicazione legata all'evento dell'elezione papale e verrà chiusa entro pochi giorni dalla proclamazione del nuovo Papa. Dopo la chiusura, i dati personali saranno cancellati entro 30 giorni, salvo obblighi di legge differenti.</p>
   </div>
 
   <div class="section">
@@ -122,7 +122,7 @@
 
   <div class="section">
     <p><strong>Diritti riservati a fantaconclave.it</strong></p>
-    <p>Per ogni informazione su Fantaconclave, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
+    <p>Per ogni informazione su FANTAEUROVISION25, o se desideri creare il tuo fantasy originale, scrivici a <a href="mailto:info@fantaconclave.it">info@fantaconclave.it</a></p>
     <p><em>In fide et ludo, semper ad astra!</em></p>
   </div>
 </body>
